<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/teal_200">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-66dp">

        <EditText
            android:id="@+id/numero1"
            android:layout_width="16dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Numero 1" />

        <EditText
            android:id="@+id/numero2"
            android:layout_width="35dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Numero 2" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="419dp"
        android:layout_height="173dp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="298dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Multiplicar" />

        <Button
            android:id="@+id/button_potencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9C1E1E"
            android:text="Potencia"
            app:iconTint="#F61212" />

        <Button
            android:id="@+id/button_fibonacci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fibonnaci" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="251dp"
        android:layout_height="191dp"
        android:layout_marginTop="540dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resultado"
            android:layout_width="800dp"
            android:layout_height="120dp"
            android:text="Resultado"
            android:textSize="60px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="232dp"
        android:layout_height="54dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout">

        <Button
            android:id="@+id/button_ncalculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nuevo Calculo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>